# cc13x2-cc26x2-flash

./: .gitmodules  Cargo.toml  README.md  build.rs  template.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
