[package]
authors = ["Sean Lyons <seanmlyons22@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "cc13x2-cc26x2-flash"
version = "0.1.0"
build="build.rs"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
vcell = "0.1.2"
critical-section = "1.0"
flash-algorithm = { version = "0.4.0" }
rtt-target = { version = "0.3", features = ["cortex-m"] }
# TODO: remove this once the cc13x2_cc26x2_pac crate is published
cc13x2_cc26x2_pac = { git = "https://github.com/seanmlyons22/ti-lprf-pacs.git", rev = "8265cd2a714f38668b525d34d1a1ec99dee1a75f", features = ["critical-section", "rt"]}

# this lets you use `cargo fix`!
[[bin]]
name = "cc13x2-cc26x2-flash"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
